feat: add audit trail page and api
